--- a/package.json
+++ b/package.json
@@ -1,18 +1,26 @@
 {
   "name": "oj-scroll-to",
-  "version": "1.0.0",
+  "version": "1.0.1",
+  "homepage": "https://www.orange-juice.nl",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/orange-juice-nl/oj-scroll-to.git"
+  },
+  "keywords": [
+    "scroll",
+    "scrollintoview"
+  ],
   "description": "Smooth scroll to an element",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc ./src/index.ts --lib esnext,dom --declaration true --outDir ./dist --module commonjs --moduleResolution node --target es5",
-    "share": "npm upgrade && npm version patch && npm run build && npm publish --registry http://web01.oj.local:3000"
+    "build": "tsc ./src/index.ts --lib esnext --declaration true --outDir ./dist --module commonjs --moduleResolution node --target es5",
+    "share": "npm upgrade && npm version patch -force && npm run build && npm publish --registry https://registry.npmjs.org"
   },
-  "keywords": [],
   "author": "Marius Linders @ Orange Juice<marius.linders@orange-juice.nl>",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
-    "oj-event": "^1.0.0",
-    "oj-eventaggregator": "^1.0.0"
+    "oj-event": "^1.0.2",
+    "oj-eventaggregator": "^1.0.2"
   }
 }
